--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header id="header">
         <nav id="nav-bar">
-            <div>
+            <div class="logo-container">
                 <img src="img/sony.svg" alt="sony logo" id="header-img" class="logo">
             </div>
             <div class="container">
@@ -31,8 +31,56 @@
             </div>
         </nav>
     </header>
-    <section>
-        <div class="hero"></div>
+                         <!-- hero section -->
+    <div class="hero">
+        <div class="hero-content">
+            <h1>music only, nothing else!</h1>
+            <button><a href="">know more</a></button>
+        </div>
+    </div>
+                        <!-- features section -->
+    <section class="features">
+        <h2>Features</h2>
+        <div class="feature">
+            <figure><img src="img/noise cancellation.svg" alt="mute icon"/>
+            </figure>
+            <figcaption><h3>complete noise cancellation</h3></figcaption>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+
+        <div class="feature">
+            <figure><img src="img/comfort.svg" alt="feather icon"/>
+            </figure>
+            <figcaption><h3>ultimate comfort</h3></figcaption>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+
+        <div class="feature">
+            <figure><img src="img/wireless-headphone.svg" alt="headphone icon"/>
+            </figure>
+            <figcaption><h3>wireless freedom</h3></figcaption>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+
+        <div class="feature">
+            <figure><img src="img/premium.svg" alt="crown icon"/>
+            </figure>
+            <figcaption><h3>premium sound</h3></figcaption>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+            </p>
+        </div>
+    </section>
+
+    <section class="video">
+        <h2>our brand video</h2>
+        <iframe src="https://youtube.com/embed/vuoxprrEwbg" id="video"></iframe>
     </section>
 </body>
 
