add readme file

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
-            <button><a href="https://www.sony.co.in/electronics/headband-headphones/wh-1000xm4" target="_blank">buy now</a></button>
+            <button><a href="#">buy now</a></button>
         </div>
 
         <div class="product">
@@ -104,7 +104,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
-            <button><a href="https://www.sony.co.in/electronics/headband-headphones/wh-xb700" target="_blank">buy now</a></button>
+            <button><a href="#">buy now</a></button>
         </div>
 
         <div class="product">
@@ -113,7 +113,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </p>
-            <button><a href="https://www.sony.co.in/electronics/headband-headphones/wh-ch510" target="_blank">buy now</a></button>
+            <button><a href="#">buy now</a></button>
         </div>
     </section>
 
